--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -268,69 +268,11 @@ jobs:
   <% if run_windows_tests[release] %>
     - do:
       - task: build-windows-test-binary
-        config:
-          platform: linux
-          image_resource:
-            type: docker-image
-            source:
-              repository: loggregator/base
-          inputs:
-          - name: <%= release %>-release
-          outputs:
-          - name: test-binaries
-          run:
-            path: bash
-            args:
-            - -c
-            - |
-              #!/bin/bash
-              set -ex
-
-              ci_root=$PWD
-              function munge {
-                echo $1 | tr '/' '_'
-              }
-
-              export GOOS=windows
-              export PATH="$GOPATH/bin:$PATH"
-              export GO111MODULE=on
-
-              pushd <%= release %>-release/src
-                go get -u ./...
-                go mod tidy
-                go mod vendor
-
-                pushd cmd
-                  for pkg in $(go list ./... | grep -vE metric-scraper\|syslog-binding-cache\|udp-forwarder); do
-                    go test -mod=vendor -c -o $ci_root/test-binaries/$(munge $pkg)_test.exe $pkg &
-                  done
-                popd
-              popd
-              wait
+        file: loggregator-ci/tasks/go-windows-tests/build-binary/task.yml
+        input_mapping:
+          release: <%= release %>-release
       - task: run-windows-tests
-        config:
-          platform: windows
-          inputs:
-          - name: test-binaries
-          run:
-            path: powershell
-            args:
-            - "-command"
-            - |
-              trap {
-                write-error $_
-                exit 1
-              }
-
-              $env:SKIP_BUILD = "true"
-
-              # Run all test binaries
-              Get-ChildItem -Filter test-binaries\*.exe | ForEach {
-                &$_.Fullname /s
-                if ($LastExitCode -ne 0) {
-                  throw "test failed"
-                }
-              }
+        file: loggregator-ci/tasks/go-windows-tests/run-tests/task.yml
   <% end %>
   - task: commit
     file: loggregator-ci/tasks/commit/task.yml
