use rebase when committing go modules

--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -286,7 +286,7 @@ jobs:
   - put: <%= release %>-release
     params:
       repository: committed-<%= release %>-release
-      rebase: false
+      rebase: true
 
 - name: <%= release %>-promotion
   serial: true
