Add serial: true to log-cache-tests
Signed-off-by: Caitlyn Yu <cyu@pivotal.io>

--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -274,6 +274,7 @@ jobs:
 ###############################################################################
 - name: log-cache-tests
   public: true
+  serial: true
   plan:
   - aggregate:
     - get: loggregator-ci
