add log-cache-tests to all group
Signed-off-by: Max Eshleman <meshleman@pivotal.io>

--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -33,6 +33,7 @@ groups:
 
   - noisy-neighbor-nozzle-tests
   - noisy-neighbor-nozzle-deploy
+  - log-cache-tests
 
 <% bosh_releases.each do |release| %>
   - <%= release %>-tests-with-bumped-modules
