fix serial group on lcats
Signed-off-by: Max Eshleman <meshleman@pivotal.io>

--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -685,7 +685,7 @@ jobs:
 
 - name: lcats
   serial_groups:
-  - bosh-cf-cats
+  - bosh-lcats
   plan:
   - aggregate:
     <% bosh_releases.each do |release| %>
