remove log-cache-syslog-server ops file

--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -549,9 +549,9 @@ jobs:
         cf-deployment-windows-addon.yml
         cf-syslog-agent-skip-cert-verify-windows.yml
         use-provided-router-certs.yml
+        fast-deploy-with-downtime-and-danger.yml
 
         log-cache-acceptance.yml
-        log-cache-syslog-server.yml
         loggregator-acceptance.yml
       VARS_FILES: ""
   - task: enable-feature-flags
