Add syslog server ops file and remove scheduler back into cf-deploy
Signed-off-by: Max Eshleman <meshleman@pivotal.io>

--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -547,6 +547,8 @@ jobs:
         cf-syslog-agent-skip-cert-verify-windows.yml
         cf-add-metrics-discovery.yml
         cf-add-metrics-discovery-windows.yml
+        log-cache-syslog-server.yml
+        remove-scheduler.yml
 
         use-provided-router-certs.yml
         fast-deploy-with-downtime-and-danger.yml
