switch to master of concourse-tasks
Signed-off-by: Tom Chen <tochen@pivotal.io>

--- a/pipelines/release.yml.erb
+++ b/pipelines/release.yml.erb
@@ -143,7 +143,7 @@ resources:
 - name: concourse-tasks
   type: git
   source:
-    branch: multi-os-go
+    branch: master
     uri: https://github.com/pivotal-cf/concourse-tasks
 
 - name: golang-release
