--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -113,7 +113,7 @@ resources:
 - name: cf-acceptance-tests
   type: git
   source:
-    branch: skip-container-metrics
+    branch: tail-retry
     uri: https://github.com/cloudfoundry/cf-acceptance-tests.git
 
 - name: cf-deployment
