add retry to go mod calls
Signed-off-by: Tom Chen <tochen@pivotal.io>

--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -563,6 +563,8 @@ jobs:
         remove-scheduler.yml
         log-cache-syslog-server.yml
 
+        cf-deployment-add-metrics-certs.yml
+
         use-provided-router-certs.yml
         fast-deploy-with-downtime-and-danger.yml
 
