Update service logs and service metrics on the fly for mTLS
Signed-off-by: Tom Chen <tochen@pivotal.io>

--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -564,6 +564,7 @@ jobs:
         log-cache-syslog-server.yml
 
         cf-deployment-add-metrics-certs.yml
+        log-cache-add-metrics-certs.yml
 
         use-provided-router-certs.yml
         fast-deploy-with-downtime-and-danger.yml
