--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -161,7 +161,7 @@ resources:
   type: git
   source:
     uri: git@github.com:cloudfoundry/loggregator-ci
-    branch: master
+    branch: debug-metrics-smoke-test
     private_key: ((cf-loggregator-oauth-bot-key))
 
 - name: log-cache-ci
