--- a/pipelines/release.yml.erb
+++ b/pipelines/release.yml.erb
@@ -27,7 +27,29 @@ bump_golang_releases = releases + [
 ]
 %>
 
+resource_types:
+- name: slack-notification
+  type: docker-image
+  source:
+    repository: cfcommunity/slack-notification-resource
+    tag: latest
+
 resources:
+- name: 48h
+  type: time
+  source:
+    interval: 48h
+- name: cf-deployment-concourse-tasks-image
+  type: docker-image
+  source:
+    repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
+    tag: latest
+
+- name: slack-alert
+  type: slack-notification
+  source:
+    url: ((slack-url))
+
 - name: loggregator-ci
   type: git
   source:
@@ -225,6 +247,51 @@ jobs:
           repository: updated-<%= release.name %>-release
           rebase: false
     <% end %>
+
+- name: cut-releases-reminder
+  serial: true
+  plan:
+  - in_parallel:
+    - get: 48h
+      trigger: true
+    - get: loggregator-ci
+    - get: cf-deployment-concourse-tasks-image
+    <% releases.each do |release| %>
+    - get: <%= release.name %>-release
+    - get: <%= release.name %>-github-release-published
+    <% end %>
+  - task: move-releases
+    image: cf-deployment-concourse-tasks-image
+    config:
+      platform: linux
+      inputs:
+      <% releases.each do |release| %>
+      - name: <%= release.name %>-release
+        path: input-releases/<%= release.name %>-release
+      - name: <%= release.name %>-github-release-published
+        path: input-github-releases/<%= release.name %>-release
+      <% end %>
+      outputs:
+      - name: releases
+      - name: published-releases
+      run:
+        path: /bin/bash
+        args:
+        - "-c"
+        - |
+          set -e
+          cp -a input-releases/* releases
+          cp -a input-github-releases/* published-releases
+  - task: diff-master-last-release
+    file: loggregator-ci/tasks/release-reminder/task.yml
+    params:
+      SSH_KEY: {{loggregator-key}}
+      MASTER_BRANCH: master
+      COMMITS_BEFORE_RELEASE: 5
+    on_failure:
+      put: slack-alert
+      params:
+        text_file: slack/message.txt
 
 <% releases.each do |release| %>
 - name: <%= release.name %>-create-final-release
