Update ops-files for metrics-agent
Signed-off-by: Caitlyn Yu <cyu@pivotal.io>

--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -557,11 +557,12 @@ jobs:
         cf-deployment-add-system-metrics-agent.yml
         cf-add-system-metric-scraper.yml
 
-        cf-deployment-add-metrics-agent.yml
         cf-deployment-add-metrics-certs.yml
         cf-deployment-windows-addon.yml
         cf-add-metrics-discovery.yml
         cf-add-metrics-discovery-windows.yml
+        cf-add-metrics-agent.yml
+        cf-add-metrics-agent-windows.yml
         remove-scheduler.yml
         log-cache-syslog-server.yml
         log-cache-add-metrics-certs.yml
