add papaya to list of dev envs
Signed-off-by: Tom Chen <tochen@pivotal.io>

--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -1,7 +1,7 @@
 <%
 bosh_releases = %w(loggregator loggregator-agent statsd-injector cf-syslog-drain leadership-election log-cache metrics-discovery)
 standalone_releases = %w(service-metrics service-logs)
-dev_envs = %w(kiwi banana)
+dev_envs = %w(kiwi banana papaya)
 
 cfd_smoke_tests = %w(cats cfar-lats lcats test-metrics-agent)
 smoke_tests = {
